# google-ads-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: google_ads.rs  http.rs  main.rs
src/google_ads/: router.rs  schemas.rs  service.rs
