[package]
name = "google-ads-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-recursion = "1"
axum = "0.7.5"
cached = "0.53.1"
chrono = "0.4"
dotenvy = "0.15"
dotenvy_macro = "0.15"
jwtk = "0.3"
num-traits = "0.2"
openssl = { version = "0.10.58", features = ["vendored"] }
percent-encoding = "2.3.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-retry = "0.3"
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
uuid = "1"
